add object-editor, selection-manager

--- a/josm/Dockerfile
+++ b/josm/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update && \
 
 COPY josm.jar /app/josm.jar
 COPY preferences.xml /root/.config/JOSM/
-COPY plugins /root/.config/JOSM/plugins/
+COPY plugins /root/.local/share/JOSM/plugins/
 
 COPY presets/BasisDLM_BY_presets.zip /app/presets/BasisDLM_BY_presets.zip
 
